--- a/resources/Makefile-ios_i386_clang
+++ b/resources/Makefile-ios_i386_clang
@@ -23,6 +23,13 @@ export RANLIB := ${CMAKE_RANLIB}
 export STRIP := ${CMAKE_STRIP}
 
 configure:
+	@echo -- Creating symlinks for OpenSSL headers
+	@mkdir openssl/include/openssl && cd openssl/include/openssl && \
+	    $(SH) ${CMAKE_CURRENT_LIST_DIR}/resources/preconfigured/create-symlinks.sh
+
+build:
+ifeq ($(wildcard ./openssl_flag),)		
+	rm -rf openssl/include/openssl
 # http://wiki.openssl.org/index.php/Compilation_and_Installation#Modifying_Build_Settings	
 	perl -i -p -e 's#^"iphoneos-cross","llvm-gcc:-O3 -isysroot .*? -fomit-frame-pointer#"iphoneos-cross","llvm-gcc:-fomit-frame-pointer ${${PROJECT_NAME}_CFLAGS}#g' ./openssl/Configure
 	perl -i -p -e 's#^install: all install_docs install_sw#install: all install_sw#g' ./openssl/Makefile.org
@@ -31,9 +38,6 @@ configure:
 	    no-asm \
 	    ${${PROJECT_NAME}_SHARED} \
 	    --openssldir=${CMAKE_CURRENT_BINARY_DIR}/openssl_install
-
-build:
-ifeq ($(wildcard ./openssl_flag),)		
 	cd openssl && $(MAKE)
 	cd openssl && $(MAKE) install
 	mkdir -p ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
