--- a/resources/Makefile-macosx_amd64_clang
+++ b/resources/Makefile-macosx_amd64_clang
@@ -13,6 +13,13 @@
 # limitations under the License.
 
 configure:
+	@echo -- Creating symlinks for OpenSSL headers
+	@mkdir openssl/include/openssl && cd openssl/include/openssl && \
+	    $(SH) ${CMAKE_CURRENT_LIST_DIR}/resources/preconfigured/create-symlinks.sh
+	
+build:
+ifeq ($(wildcard ./openssl_flag),)		
+	rm -rf openssl/include/openssl
 # http://wiki.openssl.org/index.php/Compilation_and_Installation#Modifying_Build_Settings	
 	perl -i -p -e 's#^"darwin64-x86_64-cc","cc:-arch x86_64 -O3#"darwin64-x86_64-cc","cc:-arch x86_64 ${${PROJECT_NAME}_CFLAGS}#g' ./openssl/Configure
 	perl -i -p -e 's#^install: all install_docs install_sw#install: all install_sw#g' ./openssl/Makefile.org
@@ -21,9 +28,6 @@ configure:
 	    no-asm \
 	    ${${PROJECT_NAME}_SHARED} \
 	    --openssldir=${CMAKE_CURRENT_BINARY_DIR}/openssl_install
-	
-build:
-ifeq ($(wildcard ./openssl_flag),)		
 	cd openssl && $(MAKE)
 	cd openssl && $(MAKE) install
 	mkdir -p ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
