--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,7 +97,7 @@ if ( STATICLIB_USE_DEPLIBS_CACHE )
         set_target_properties( crypto PROPERTIES IMPORTED_LOCATION ${${PROJECT_NAME}_CACHED_LIB_PATH_CRYPTO} )
         add_library( ssl STATIC IMPORTED GLOBAL )
         set_target_properties( ssl PROPERTIES IMPORTED_LOCATION ${${PROJECT_NAME}_CACHED_LIB_PATH_SSL} )
-        add_custom_target( ${PROJECT_NAME} crypto ssl )
+        add_custom_target( ${PROJECT_NAME} )
         message ( STATUS "Using cached library: [${${PROJECT_NAME}_CACHED_LIB_PATH_CRYPTO}]" )
         message ( STATUS "Using cached library: [${${PROJECT_NAME}_CACHED_LIB_PATH_SSL}]" )
         return ( )
